fix: misaligned filter items

--- a/src/app/base/components/FilterAccordion/_index.scss
+++ b/src/app/base/components/FilterAccordion/_index.scss
@@ -45,7 +45,7 @@
   }
 
   .filter-accordion__item {
-    padding-left: $sp-unit * 5;
+    padding-left: $sp-unit * 6;
 
     &.is-active {
       background-image: url("data:image/svg+xml,%3Csvg width='22' height='16' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M-1-1h24v24H-1z'/%3E%3Cpath fill='" + vf-url-friendly-color(
